# ascii-matrix

./: README.md  main.py  pyproject.toml
src/ascii_matrix/: constants.py  main.py
src/ascii_matrix/ascii_image/: image.py  to_ascii.py
src/ascii_matrix/cli/: parser.py  render.py
src/ascii_matrix/effects/: matrix.py
src/ascii_matrix/fs/: validate_path.py
tests/: test_image.py  test_matrix.py  test_parser.py  test_to_ascii.py  test_validate_path.py
