[project]
name = "ascii-matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
]

[project.scripts]
ascii-matrix = "ascii_matrix.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
